--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <title>Cootels</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header__wrapper">
+            <a href="#" class="header__logo">Cootels</a>
+            <nav>
+                <ul class="menu">
+                    <li class="menu__item"><a href="#">Rooms</a></li>
+                    <li class="menu__item"><a href="#">Reservation</a></li>
+                    <li class="menu__item"><a href="#">Contacs</a></li>
+                </ul>
+            </nav>
+            <button class="button">Get Started</button>
+        </div>
+    </header>
 </body>
 </html>
