--- a/index.html
+++ b/index.html
@@ -24,5 +24,19 @@
             <button class="button">Get Started</button>
         </div>
     </header>
+
+    <section class="section">
+        <div class="hero">
+                <div class="hero__left">
+                    <div class="hero__h1">Nature, Warmth, and<br> Beauty in One Space</div>
+                    <div class="hero__p">One place to release all the stress, bring back happines,<br> and get back to nature. We provide the best room and<br> nature for you. Come visit us anytime you want.</div>
+                    <button class="button button_pad">Reservation</button>
+                </div>
+                <div class="hero__right">
+                    <img src="./images/group-ph-header.png" alt="">
+                </div>
+
+        </div>
+    </section>
 </body>
 </html>
